playing with slick and mysql

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,5 @@
-@(message: String)
+@(message: String)(implicit request: play.api.mvc.Request[AnyContent])
 
-@main("Welcome to Play") {
-
-    @play20.welcome(message)
-
+@main("Red Card Robot") {
+    @message
 }
