--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String)(content: Html)(implicit request: play.api.mvc.Request[AnyContent])
 
 <!DOCTYPE html>
 
@@ -7,9 +7,102 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.1/fullcalendar.min.css"/>
+        <link rel="stylesheet" media="print" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.1/fullcalendar.print.css"/>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
+        <script src="https://code.jquery.com/jquery-1.12.2.min.js" integrity="sha256-lZFHibXzMHo3GGeehn1hudTAP3Sc0uKXBXAzHX1sjtk=" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/2.6.1/fullcalendar.min.js"></script>
     </head>
-    <body>
-        @content
-    </body>
+
+<body>
+
+            <div>
+                <nav class="navbar navbar-inverse navbar-fixed-top">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <span class="navbar-brand">Red Card Robot</span>
+                        </div>
+                        <div class="collapse navbar-collapse">
+                            <ul class="nav navbar-nav">
+                                <li class="@("active".when(request.path == controllers.routes.Application.index().toString()))">
+                                    <a href="@routes.Application.index()"><i class="fa fa-dashboard"></i><span> </span><span>Dashboard</span></a>
+                                </li>
+                                <li class="@("active".when(request.path == controllers.routes.Application.members().toString()))">
+                                    <a href="@routes.Application.members()"><i class="fa fa-user"></i><span> </span><span>Members</span></a>
+                                </li>
+                                <li class="@("active".when(request.path == controllers.routes.Application.events().toString()))">
+                                    <a href="@routes.Application.events()"><i class="fa fa-calendar-o"></i><span> </span><span>Events</span></a>
+                                </li>
+                                <li class="@("active".when(request.path == controllers.routes.Application.messages().toString()))">
+                                    <a href="@routes.Application.messages()"><i class="fa fa-envelope-o"></i><span> </span><span>Messages</span></a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+
+        <div class="container">
+            <p>@content</p>
+            <div id="calendar"></div>
+        </div>
+
+</body>
+
+    <script>
+            $(document).ready(function() {
+
+                $('#calendar').fullCalendar({
+                    header: {
+                        left: 'prev,next today',
+                        center: 'title',
+                        right: 'month,basicWeek,basicDay'
+                    },
+                    defaultDate: '2016-03-14',
+                    editable: true,
+                    eventLimit: true, // allow "more" link when too many events
+                    events: [
+
+                        {
+                            id: 999,
+                            title: 'Rehearsal 1',
+                            start: '2016-03-09T19:00:00'
+                        },
+                        {
+                            id: 999,
+                            title: 'Rehearsal 2',
+                            start: '2016-03-16T19:00:00'
+                        },
+                        {
+                            id: 999,
+                            title: 'Rehearsal 3',
+                            start: '2016-03-23T19:00:00'
+                        },
+                        {
+                            id: 999,
+                            title: 'Rehearsal 4',
+                            start: '2016-03-30T19:00:00'
+                        },
+                        {
+                            id: 999,
+                            title: 'Game 1',
+                            start: '2016-03-19T19:00:00'
+                        },
+                        {
+                            id: 999,
+                            title: 'Game 2',
+                            start: '2016-04-02T19:00:00'
+                        }
+
+                    ]
+                });
+
+            });
+    </script>
+
 </html>
